--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 <body>
     <h1>My Contact Details</h1>
     <p>
-        My address(I won't reveal it you...)<br />
+        My address(I won't reveal it to you...)<br />
         Phone Number - +XX XXX XXX XXXX<br />
         Email - astebe80@gmail.com
     </p>
